# RiichiEnv

./: DEVEL.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pytest.yml  ruff_ty.yml
benchmark/: bench_agari.py
demos/: random_game.py  replay_demo.ipynb
docs/: DEVELOPMENT_GUIDE.md
native/: Cargo.toml
native/src/: env.rs  lib.rs  tests.rs  y47_encode.rs  y47_schema.rs  y47_turn.rs
riichienv/: .gitignore  README.md  pyproject.toml
riichienv/scripts/: verify_gym_api.py  verify_gym_api_with_mjsoul.py  verify_yakus_rust.py
riichienv/src/: agari.rs  agari_calculator.rs  env.rs  lib.rs  parser.rs  types.rs
riichienv/src/riichienv/: __init__.py  _riichienv.pyi  action.py  convert.py  env.py  game_mode.py  hand.py  log.py  meld.py
riichienv/src/riichienv/agents/: random_agent.py
riichienv/src/riichienv/visualizer/assets/: viewer.js
riichienv/tests/: test_agari_calculator.py  test_chankan.py  test_core.py  test_daiminkan.py  test_env.py  test_env_ranks_points.py  test_env_scoring.py  test_game_rules.py  test_kakan.py  test_meld_aka.py  test_midway_draw.py  test_oyayame_tiebreak.py  test_paishan.py  test_pao.py  test_pao_honba.py  test_riichi_no_claim.py  test_riichi_pass.py  test_verifier_daiminkan.py
riichienv/tests/env/: test_honba_reset.py  test_kuikae.py  test_m27_chankan_inconsistency.py  test_riichi_no_claims.py  test_riichienv.py  test_temporary_furiten.py
src/riichienv/: __init__.py  _riichienv.cp312-win_amd64.pyd  _riichienv.pyi
src/riichienv/visualizer/: viewer.py
tests/: test_y47_rl_parity.py
(+8 files in other folders)
