[project]
name = "riichienv"
version = "0.1.0"
description = "A Modular, High-Performance Research Environment for Riichi Mahjong"
readme = "README.md"
# PyO3 0.23.5 does not support Python 3.14 yet
requires-python = ">=3.10,<3.14"
dependencies = [
    "mahjong==1.4.0",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
module-name = "riichienv._riichienv"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest",
]

[project.scripts]
test = "pytest:console_main"
